testsuite/tests/grammar/invalid_unparser/test.out
== Pick in Or ==
pick-in-or.lkt:5:9: error: Unsupported token node parser for unparsers generation, only direct token parsers are accepted: Extract(Row(Token(<WithText Example>), Transform(Row(Token(<WithSymbol Identifier>)), Identifier)), 1)
4 |         pick("example" Identifier(@identifier))
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== Toplevel Pick ==
toplevel-pick.lkt:4:29: error: Top-level information loss prevents unparsers generation
3 |     @main_rule main_rule <- pick("example" Root(item))
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^


== Several token kinds for token node (1) ==
several-1.lkt:5:9: error: Unsupported token node parser for unparsers generation, only direct token parsers are accepted: Transform(Row(Or(Token(<WithSymbol Identifier>), Token(<WithText Example>))), Identifier)
4 |         Identifier(or(@identifier | @example))
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== Several token kinds for token node (2) ==
several-2.lkt:6:11: error: The Identifier token node can be associated to only one token kind: here we have Example, but we already had Identifier
5 |         | Identifier(@example)
  |           ^^^^^^^^^^^^^^^^^^^^


== Pick in List ==
pick-in-list.lkt:4:29: error: Unparsers generation require list parsers to directly build nodes for each list item
3 |     @main_rule main_rule <- list+("example" Root(or(


== Ambiguous lists ==
error: Inconsistent separation token for FooNode.list: , and <none>

Done
